finished second problem
